--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ bcrypt = "^4.1.3"
 injector = "^0.21.0"
 starlette = "^0.37.2"
 pydantic-settings = "^2.3.1"
-python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 pytest-env = "^1.1.3"
+pyjwt = "^2.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
