--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ injector = "^0.21.0"
 starlette = "^0.37.2"
 pydantic-settings = "^2.3.1"
 pytest-env = "^1.1.3"
-pyjwt = "^2.8.0"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 
 
 [tool.poetry.group.dev.dependencies]
